--- a/alc-draft.html
+++ b/alc-draft.html
@@ -6,8 +6,8 @@
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <title>ALC - Quick Start Guide</title>
 
-<link href="\bootstrap\css\bootstrap.min.css" rel="stylesheet">
-<script src="\bootstrap\js\bootstrap.min.js"></script>
+<link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<script src="/bootstrap/js/bootstrap.min.js"></script>
 
 <style>
 
