cleaning up list groups

--- a/alc-draft.html
+++ b/alc-draft.html
@@ -77,41 +77,6 @@ body { padding-top: 100px; }
 
 
 
-<div class="panel-group">
-  <div class="panel panel-default">
-  <!-- Default panel contents -->
-  <div class="panel-heading">
-    <h4 class="panel-title">Panel headingTurn your room on (and off) <span class="caret"></span><span class="glyphicon glyphicon-on pull-right"></span></h4></div>
-  <div class="panel-body">
-    <p>without physically touching any equipment</p>
-  </div>
-
-  <!-- List group -->
-  <ul class="list-group">
-    <li class="list-group-item">Cras justo odio</li>
-    <li class="list-group-item">Dapibus ac facilisis in</li>
-    <li class="list-group-item">Morbi leo risus</li>
-    <li class="list-group-item">Porta ac consectetur ac</li>
-    <li class="list-group-item">Vestibulum at eros</li>
-  </ul>
-</div>
-
-
-
-
-
-
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
-          Collapsible Group Item #1
-      </h4>
-    </div>
-  <div class="panel-body">
-      TEXT HERE
-  </div>
-
-
 </div>
 
 
@@ -135,47 +100,59 @@ body { padding-top: 100px; }
 </div>
 
 <div class="row">
-
-<div class="col-md-7 col-sm-7 col-xs-7">
-<div class="panel panel-default">
-  <!-- Default panel contents -->
-  <div class="panel-heading" id="turn-on"><strong>General</strong></div>
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+  <div class="panel panel-default">
+    <!-- Default panel contents -->
+    <div class="panel-heading" id="turn-on"><strong>General</strong></div>
+    <div class="panel-body"></div>
+      <ul class="list-group">
+        <li class="list-group-item">Cras justo odio</li>
+        <li class="list-group-item">Dapibus ac facilisis in</li>
+        <li class="list-group-item">Morbi leo risus</li>
+        <li class="list-group-item">Porta ac consectetur ac</li>
+      <li class="list-group-item">Vestibulum at eros</li>
+    </ul>
+  </div>
+  </div>
 </div>
 
-<div class="panel panel-default">
-  <!-- Default panel contents -->
-  <div class="panel-heading" id="present"><strong>General Mail Information</strong></div>
+<div class="row">
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+  <div class="panel panel-default">
+    <!-- Default panel contents -->
+    <div class="panel-heading" id="present"><strong>General Mail Information</strong></div>
+    <div class="panel-body"></div>
+      <ul class="list-group">
+        <li class="list-group-item">Cras justo odio</li>
+        <li class="list-group-item">Dapibus ac facilisis in</li>
+        <li class="list-group-item">Morbi leo risus</li>
+        <li class="list-group-item">Porta ac consectetur ac</li>
+        <li class="list-group-item">Vestibulum at eros</li>
+      </ul>
+  </div>
+  </div> 
 </div>
 
-<div class="panel panel-default">
-  <!-- Default panel contents -->
-  <div class="panel-heading" id="share"><strong>Mailbox - mailbox for account</strong></div>
+<div class="row">
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+  <div class="panel panel-default">
+    <!-- Default panel contents -->
+    <div class="panel-heading" id="share"><strong>Mailbox - mailbox for account</strong></div>
+    <div class="panel-body"></div>
+      <ul class="list-group">
+        <li class="list-group-item">Cras justo odio</li>
+        <li class="list-group-item">Dapibus ac facilisis in</li>
+        <li class="list-group-item">Morbi leo risus</li>
+        <li class="list-group-item">Porta ac consectetur ac</li>
+        <li class="list-group-item">Vestibulum at eros</li>
+      </ul>
+  </div>
+  </div>
 </div>
-<!-- end col -->
-</div>
+
 
 
  
-<div class="col-md-5 col-sm-5 col-xs-5">
-<div class="panel panel-default">
-  <!-- Default panel contents -->
-  <div class="panel-heading"><strong>Affiliations</strong></div>
-</div>
-
-<div class="panel panel-default">
-  <!-- Default panel contents -->
-  <div class="panel-heading"><strong>ACL Bits</strong></div>
-</div>
-
-<div class="panel panel-default">
-  <!-- Default panel contents -->
-  <div class="panel-heading"><strong>Misc</strong></div>
-</div>
-<!-- end col -->
-</div>
-
-<!-- end row -->
-</div>
 
 
 
