--- a/alc-draft.html
+++ b/alc-draft.html
@@ -97,7 +97,7 @@ body { padding-top: 100px; }
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
   <div class="panel panel-default">
     <!-- Default panel contents -->
-    <div class="panel-heading" id="turn-on">Power on <span class="glyphicon glyphicon-on"></div>
+    <div class="panel-heading" id="turn-on">Power on <span class="glyphicon glyphicon-off pull-right"></div>
     <div class="panel-body">
       <ol>
         <li>Cras justo odio</li>
@@ -105,7 +105,7 @@ body { padding-top: 100px; }
         <li>Morbi leo risus</li>
         <li>Porta ac consectetur ac</li>
         <li>Vestibulum at eros</li>
-    </ul>
+    </ol>
   </div>
   </div>
 </div>
@@ -114,15 +114,15 @@ body { padding-top: 100px; }
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
   <div class="panel panel-default">
     <!-- Default panel contents -->
-    <div class="panel-heading" id="present"><strong>General Mail Information</strong></div>
-    <div class="panel-body"></div>
-      <ul class="list-group">
-        <li class="list-group-item">Cras justo odio</li>
-        <li class="list-group-item">Dapibus ac facilisis in</li>
-        <li class="list-group-item">Morbi leo risus</li>
-        <li class="list-group-item">Porta ac consectetur ac</li>
-        <li class="list-group-item">Vestibulum at eros</li>
-      </ul>
+    <div class="panel-heading" id="present">Present <span class="glyphicon glyphicon-blackboard pull-right"></div>
+    <div class="panel-body">
+      <ol>
+        <li>Cras justo odio</li>
+        <li>Dapibus ac facilisis in</li>
+        <li>Morbi leo risus</li>
+        <li>Porta ac consectetur ac</li>
+        <li>Vestibulum at eros</li>
+      </ol>
   </div>
   </div> 
 </div>
@@ -131,15 +131,15 @@ body { padding-top: 100px; }
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
   <div class="panel panel-default">
     <!-- Default panel contents -->
-    <div class="panel-heading" id="share"><strong>Mailbox - mailbox for account</strong></div>
-    <div class="panel-body"></div>
-      <ul class="list-group">
-        <li class="list-group-item">Cras justo odio</li>
-        <li class="list-group-item">Dapibus ac facilisis in</li>
-        <li class="list-group-item">Morbi leo risus</li>
-        <li class="list-group-item">Porta ac consectetur ac</li>
-        <li class="list-group-item">Vestibulum at eros</li>
-      </ul>
+    <div class="panel-heading" id="share">Share <span class="glyphicon glyphicon-share pull-right"></div>
+    <div class="panel-body">
+      <ol>
+        <li>Cras justo odio</li>
+        <li>Dapibus ac facilisis in</li>
+        <li>Morbi leo risus</li>
+        <li>Porta ac consectetur ac</li>
+        <li>Vestibulum at eros</li>
+      </ol>
   </div>
   </div>
 </div>
