--- a/alc-draft.html
+++ b/alc-draft.html
@@ -62,15 +62,15 @@ body { padding-top: 100px; }
 
 <div class="list-group">
   	<a href="#turn-on" class="list-group-item">
-      <h4 class="list-group-item-heading">Turn your room on (and off) <span class="caret"></span></h4>
+      <h4 class="list-group-item-heading">Turn your room on (and off) <span class="caret"></span><span class="glyphicon glyphicon-off pull-right"></h4>
     	<p class="list-group-item-text">without physically touching any equipment</p>
   	</a>
   	<a href="#present" class="list-group-item">
-    	<h4 class="list-group-item-heading">Prep for presentation <span class="caret"></span></h4>
+    	<h4 class="list-group-item-heading">Prep for presentation <span class="caret"></span><span class="glyphicon glyphicon-blackboard pull-right"></h4>
     	<p class="list-group-item-text">in three steps</p>
   	</a>
   	<a href="#share" class="list-group-item">
-    	<h4 class="list-group-item-heading">Share your content <span class="caret"></span></h4>
+    	<h4 class="list-group-item-heading">Share your content <span class="caret"></span><span class="glyphicon glyphicon-share pull-right"></h4>
     	<p class="list-group-item-text">using a simple drag and drop interface</p>
   	</a>
 </div>
@@ -107,7 +107,6 @@ body { padding-top: 100px; }
         <li>Vestibulum at eros</li>
     </ol>
   </div>
-  </div>
 </div>
 
 <div class="row">
@@ -124,7 +123,6 @@ body { padding-top: 100px; }
         <li>Vestibulum at eros</li>
       </ol>
   </div>
-  </div> 
 </div>
 
 <div class="row">
@@ -140,7 +138,6 @@ body { padding-top: 100px; }
         <li>Porta ac consectetur ac</li>
         <li>Vestibulum at eros</li>
       </ol>
-  </div>
   </div>
 </div>
 
