--- a/alc-draft.html
+++ b/alc-draft.html
@@ -97,7 +97,7 @@ body { padding-top: 100px; }
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
   <div class="panel panel-default">
     <!-- Default panel contents -->
-    <div class="panel-heading" id="turn-on">Power on <span class="glyphicon glyphicon-off pull-right"></div>
+    <div class="panel-heading" id="turn-on">Power on <a href="#"><span class="glyphicon glyphicon-chevron-up"></span></a><span class="glyphicon glyphicon-off pull-right"></div>
     <div class="panel-body">
       <ol>
         <li>Cras justo odio</li>
@@ -113,7 +113,7 @@ body { padding-top: 100px; }
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
   <div class="panel panel-default">
     <!-- Default panel contents -->
-    <div class="panel-heading" id="present">Present <span class="glyphicon glyphicon-blackboard pull-right"></div>
+    <div class="panel-heading" id="present">Present <a href="#"><span class="glyphicon glyphicon-chevron-up"></span></a><span class="glyphicon glyphicon-blackboard pull-right"></div>
     <div class="panel-body">
       <ol>
         <li>Cras justo odio</li>
@@ -129,7 +129,7 @@ body { padding-top: 100px; }
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
   <div class="panel panel-default">
     <!-- Default panel contents -->
-    <div class="panel-heading" id="share">Share <span class="glyphicon glyphicon-share pull-right"></div>
+    <div class="panel-heading" id="share">Share <a href="#"><span class="glyphicon glyphicon-chevron-up"></span></a><span class="glyphicon glyphicon-share pull-right"></div>
     <div class="panel-body">
       <ol>
         <li>Cras justo odio</li>
