--- a/alc-draft.html
+++ b/alc-draft.html
@@ -97,7 +97,7 @@ body { padding-top: 100px; }
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
   <div class="panel panel-default">
     <!-- Default panel contents -->
-    <div class="panel-heading" id="turn-on">Power on <a href="#"><span class="caret-up pull-right"></span></a></div>
+    <div class="panel-heading" id="turn-on">Power on <a href="#"><span class="dropup pull-right"><span class="caret"></span></span></a></div>
     <div class="panel-body">
       <ol>
         <li>Cras justo odio</li>
@@ -113,7 +113,7 @@ body { padding-top: 100px; }
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
   <div class="panel panel-default">
     <!-- Default panel contents -->
-    <div class="panel-heading" id="present">Present <a href="#"><span class="caret-up pull-right"></span></a></div>
+    <div class="panel-heading" id="present">Present <a href="#"><a href="#"><span class="dropup pull-right"><span class="caret"></span></span></a></div>
     <div class="panel-body">
       <ol>
         <li>Cras justo odio</li>
@@ -129,7 +129,7 @@ body { padding-top: 100px; }
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
   <div class="panel panel-default">
     <!-- Default panel contents -->
-    <div class="panel-heading" id="share">Share <a href="#"><span class="caret-up pull-right"></span></a></div>
+    <div class="panel-heading" id="share">Share <a href="#"><a href="#"><span class="dropup pull-right"><span class="caret"></span></span></a></div>
     <div class="panel-body">
       <ol>
         <li>Cras justo odio</li>
