collapse list test

--- a/alc-draft.html
+++ b/alc-draft.html
@@ -75,6 +75,42 @@ body { padding-top: 100px; }
   	</a>
 </div>
 
+
+
+
+<ul id="menu">
+
+    <li class="panel">
+        <a data-toggle="collapse" data-parent="#menu" href="#one">One</a>
+        <ul id="one" class="collapse">
+            <li><a href="#">Point One</a></li>
+            <li><a href="#">Point Two</a></li>
+            <li><a href="#">Point Three</a></li>
+        </ul>
+    </li>
+
+    <li class="panel">
+        <a data-toggle="collapse" data-parent="#menu" href="#two">Two</a>
+        <ul id="two" class="collapse">
+            <li><a href="#">Point One</a></li>
+            <li><a href="#">Point Two</a></li>
+            <li><a href="#">Point Three</a></li>
+        </ul>
+    </li>
+
+    <li class="panel">
+        <a data-toggle="collapse" data-parent="#menu" href="#three">Three</a>
+        <ul id="three" class="collapse">
+            <li><a href="#">Point One</a></li>
+            <li><a href="#">Point Two</a></li>
+            <li><a href="#">Point Three</a></li>
+        </ul>
+    </li>
+
+</ul>
+
+
+
 <div class="row">
 <div class="col-md-12 col-sm-12">
 <br>
