--- a/alc-draft.html
+++ b/alc-draft.html
@@ -8,6 +8,7 @@
 
 <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <script src="/bootstrap/js/bootstrap.min.js"></script>
+<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 
 <style>
 
