--- a/alc-draft.html
+++ b/alc-draft.html
@@ -74,13 +74,10 @@ body { padding-top: 100px; }
 	
 <p>&nbsp;</p>
 
-<div id="foo"><p>test</p></div>
-
-
 <div class="list-group">
   	<a href="javascript:void(0)" onclick="toggle_visibility('foo');" class="list-group-item">
       <h4 class="list-group-item-heading">Turn your room on (and off) <span class="caret"></span><span class="glyphicon glyphicon-off pull-right"></h4>
-    	<p class="list-group-item-text">without physically touching any equipment</p>
+    	<p id="foo" class="list-group-item-text">without physically touching any equipment</p>
   	</a>
   	<a href="#present" class="list-group-item">
     	<h4 class="list-group-item-heading">Prep for presentation <span class="caret"></span><span class="glyphicon glyphicon-blackboard pull-right"></h4>
