--- a/alc-draft.html
+++ b/alc-draft.html
@@ -74,7 +74,7 @@ body { padding-top: 100px; }
 	
 <p>&nbsp;</p>
 
-<div class="list-group">
+<!-- <div class="list-group">
   	<a href="javascript:void(0)" onclick="toggle_visibility('foo');" class="list-group-item">
       <h4 class="list-group-item-heading">Turn your room on (and off) <span class="caret"></span><span class="glyphicon glyphicon-off pull-right"></h4>
     	<p id="foo" class="list-group-item-text">without physically touching any equipment</p>
@@ -87,57 +87,77 @@ body { padding-top: 100px; }
     	<h4 class="list-group-item-heading">Share your content <span class="caret"></span><span class="glyphicon glyphicon-share pull-right"></h4>
     	<p class="list-group-item-text">using a simple drag and drop interface</p>
   	</a>
+</div> -->
+
+
+<div class="row">
+<div class="col-md-12 col-sm-12">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a href="javascript:void(0)" onclick="toggle_visibility('turn-on');">
+          Turn your room on (and off) </span><span class="glyphicon glyphicon-off pull-right"></span>
+        </a>
+      </h4>
+    </div>
+      <div id="turn-on" class="panel-body">
+        <ol>
+          <li>Cras justo odio</li>
+          <li>Dapibus ac facilisis in</li>
+          <li>Morbi leo risus</li>
+          <li>Porta ac consectetur ac</li>
+          <li>Vestibulum at eros</li>
+        </ol>
+      </div>
+    </div>
+</div>
+</div>  
+
+<div class="row">
+<div class="col-md-12 col-sm-12">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a href="javascript:void(0)" onclick="toggle_visibility('present');">
+          Prep for presentation <span class="glyphicon glyphicon-blackboard pull-right"></span>
+        </a>
+      </h4>
+    </div>
+      <div id="present" class="panel-body">
+        <ol>
+          <li>Cras justo odio</li>
+          <li>Dapibus ac facilisis in</li>
+          <li>Morbi leo risus</li>
+          <li>Porta ac consectetur ac</li>
+          <li>Vestibulum at eros</li>
+        </ol>
+      </div>
+    </div>
+</div>
 </div>
 
-
-
-
-<div class="panel-group" id="accordion">
+<div class="row">
+<div class="col-md-12 col-sm-12">
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-          Collapsible Group Item #1
+        <a href="javascript:void(0)" onclick="toggle_visibility('share');">
+          Share your content <span class="glyphicon glyphicon-share pull-right"></span>
         </a>
       </h4>
     </div>
-    <div id="collapseOne" class="panel-collapse collapse in">
-      <div class="panel-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+      <div id="share" class="panel-body">
+        <ol>
+          <li>Cras justo odio</li>
+          <li>Dapibus ac facilisis in</li>
+          <li>Morbi leo risus</li>
+          <li>Porta ac consectetur ac</li>
+          <li>Vestibulum at eros</li>
+        </ol>
       </div>
     </div>
-  </div>
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-          Collapsible Group Item #2
-        </a>
-      </h4>
-    </div>
-    <div id="collapseTwo" class="panel-collapse collapse">
-      <div class="panel-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-      </div>
-    </div>
-  </div>
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-          Collapsible Group Item #3
-        </a>
-      </h4>
-    </div>
-    <div id="collapseThree" class="panel-collapse collapse">
-      <div class="panel-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-      </div>
-    </div>
-  </div>
 </div>
-
-
+</div>
 
 <div class="row">
 <div class="col-md-12 col-sm-12">
@@ -151,7 +171,7 @@ body { padding-top: 100px; }
 </div>
 
 
-<div class="row">
+<!-- <div class="row">
 <div class="col-md-12 col-sm-12">
 <h3>Getting Started</h3>
 </div>
@@ -160,7 +180,6 @@ body { padding-top: 100px; }
 <div class="row">
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
   <div class="panel panel-default">
-    <!-- Default panel contents -->
     <div class="panel-heading" id="turn-on">Power on <a href="#"><span class="dropup pull-right"><span class="caret"></span></span></a></div>
     <div class="panel-body">
       <ol>
@@ -176,7 +195,6 @@ body { padding-top: 100px; }
 <div class="row">
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
   <div class="panel panel-default">
-    <!-- Default panel contents -->
     <div class="panel-heading" id="present">Present <a href="#"><a href="#"><span class="dropup pull-right"><span class="caret"></span></span></a></div>
     <div class="panel-body">
       <ol>
@@ -192,7 +210,6 @@ body { padding-top: 100px; }
 <div class="row">
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
   <div class="panel panel-default">
-    <!-- Default panel contents -->
     <div class="panel-heading" id="share">Share <a href="#"><a href="#"><span class="dropup pull-right"><span class="caret"></span></span></a></div>
     <div class="panel-body">
       <ol>
@@ -203,7 +220,7 @@ body { padding-top: 100px; }
         <li>Vestibulum at eros</li>
       </ol>
   </div>
-</div>
+</div> -->
 
 
 
