--- a/alc-draft.html
+++ b/alc-draft.html
@@ -74,21 +74,6 @@ body { padding-top: 100px; }
 	
 <p>&nbsp;</p>
 
-<!-- <div class="list-group">
-  	<a href="javascript:void(0)" onclick="toggle_visibility('foo');" class="list-group-item">
-      <h4 class="list-group-item-heading">Turn your room on (and off) <span class="caret"></span><span class="glyphicon glyphicon-off pull-right"></h4>
-    	<p id="foo" class="list-group-item-text">without physically touching any equipment</p>
-  	</a>
-  	<a href="#present" class="list-group-item">
-    	<h4 class="list-group-item-heading">Prep for presentation <span class="caret"></span><span class="glyphicon glyphicon-blackboard pull-right"></h4>
-    	<p class="list-group-item-text">in three steps</p>
-  	</a>
-  	<a href="#share" class="list-group-item">
-    	<h4 class="list-group-item-heading">Share your content <span class="caret"></span><span class="glyphicon glyphicon-share pull-right"></h4>
-    	<p class="list-group-item-text">using a simple drag and drop interface</p>
-  	</a>
-</div> -->
-
 
 <div class="row">
 <div class="col-md-12 col-sm-12">
@@ -96,7 +81,7 @@ body { padding-top: 100px; }
     <div class="panel-heading">
       <h4 class="panel-title">
         <a href="javascript:void(0)" onclick="toggle_visibility('turn-on');">
-          Turn your room on (and off) </span><span class="glyphicon glyphicon-off pull-right"></span>
+          Turn the room on </span><span class="glyphicon glyphicon-off pull-right"></span>
         </a>
       </h4>
     </div>
@@ -166,68 +151,9 @@ body { padding-top: 100px; }
 
 <p>Standard wildcard characters may be used in searches. Searches that return a large number records (e.g., <code>Network ID equals *</code>) will take a long time to complete and may cause the browser to time out.</p>
 <p>Wildcard searches are most useful when you do not know if a name has an unusual spelling, pronunciation, or is long and may have been shortened in some records (for example Shannon Huntington Smythe-Whitely => Shannon Huntington). A search like <code>Full name equals Shannon *huntington*</code> would reduce the selection set considerably but still produce useful results.</p>
-<p>Need help? Call the ITS Service Desk at (216) 368-<STRONG>HELP</STRONG> (4357). Use your cell, or the white phone mounted to the presenter's station.</p>
+<p>Need help? Call the ITS Service Desk at <a href="tel:216-368-4357">(216) 368-<STRONG>HELP</STRONG> (4357)</a>. Use your cell, or the white phone mounted to the presenter's station.</p>
 </div>
 </div>
-
-
-<!-- <div class="row">
-<div class="col-md-12 col-sm-12">
-<h3>Getting Started</h3>
-</div>
-</div>
-
-<div class="row">
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-  <div class="panel panel-default">
-    <div class="panel-heading" id="turn-on">Power on <a href="#"><span class="dropup pull-right"><span class="caret"></span></span></a></div>
-    <div class="panel-body">
-      <ol>
-        <li>Cras justo odio</li>
-        <li>Dapibus ac facilisis in</li>
-        <li>Morbi leo risus</li>
-        <li>Porta ac consectetur ac</li>
-        <li>Vestibulum at eros</li>
-    </ol>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-  <div class="panel panel-default">
-    <div class="panel-heading" id="present">Present <a href="#"><a href="#"><span class="dropup pull-right"><span class="caret"></span></span></a></div>
-    <div class="panel-body">
-      <ol>
-        <li>Cras justo odio</li>
-        <li>Dapibus ac facilisis in</li>
-        <li>Morbi leo risus</li>
-        <li>Porta ac consectetur ac</li>
-        <li>Vestibulum at eros</li>
-      </ol>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-  <div class="panel panel-default">
-    <div class="panel-heading" id="share">Share <a href="#"><a href="#"><span class="dropup pull-right"><span class="caret"></span></span></a></div>
-    <div class="panel-body">
-      <ol>
-        <li>Cras justo odio</li>
-        <li>Dapibus ac facilisis in</li>
-        <li>Morbi leo risus</li>
-        <li>Porta ac consectetur ac</li>
-        <li>Vestibulum at eros</li>
-      </ol>
-  </div>
-</div> -->
-
-
-
- 
-
-
-
 
 
 <div id="heading-1" class="row">
