--- a/alc-draft.html
+++ b/alc-draft.html
@@ -151,7 +151,7 @@ body { padding-top: 100px; }
 
 <p>Standard wildcard characters may be used in searches. Searches that return a large number records (e.g., <code>Network ID equals *</code>) will take a long time to complete and may cause the browser to time out.</p>
 <p>Wildcard searches are most useful when you do not know if a name has an unusual spelling, pronunciation, or is long and may have been shortened in some records (for example Shannon Huntington Smythe-Whitely => Shannon Huntington). A search like <code>Full name equals Shannon *huntington*</code> would reduce the selection set considerably but still produce useful results.</p>
-<p>Need help? Call the ITS Service Desk at <a href="tel:216-368-4357">(216) 368-<STRONG>HELP</STRONG> (4357)</a>. Use your cell, or the white phone mounted to the presenter's station.</p>
+<p>Call the ITS Service Desk at <a href="tel:216-368-4357"><strong>(216) 368-4357</strong> (click to call)</a> for more help. No cell? A white service phone is mounted to the presenter's station for your convenience.</p>
 </div>
 </div>
 
