--- a/alc-draft.html
+++ b/alc-draft.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1">
- <title>ALC - Quick Start Guide</title>
+ <title>ALS - Quick Start Guide</title>
 
 <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <script src="/bootstrap/js/bootstrap.min.js"></script>
@@ -87,11 +87,10 @@ body { padding-top: 100px; }
     </div>
       <div id="turn-on" class="panel-body">
         <ol>
-          <li>Cras justo odio</li>
-          <li>Dapibus ac facilisis in</li>
-          <li>Morbi leo risus</li>
-          <li>Porta ac consectetur ac</li>
-          <li>Vestibulum at eros</li>
+          <li>Using the control touch panel at the far right of the room, find the power icon and tap [on text]</li>
+          <li>Presenter and participant stations turn on.</li>
+          <li>Individual input devices (e.g., document camera, media players, etc.) power on or return from standby when selected as input.</li>
+          <li>To turn the room off, find the power icon and tap it again.</li>
         </ol>
       </div>
     </div>
