expand further reading

--- a/alc-draft.html
+++ b/alc-draft.html
@@ -165,13 +165,7 @@ body { padding-top: 100px; }
 <div class="col-md-4 col-sm-4">
 
 <div class="panel panel-default">
-  <!-- Default panel contents -->
   <div class="panel-heading"><strong>Devices</strong></div>
-</div>
-
-<div class="panel panel-default">
-  <!-- Default panel contents -->
-  <div class="panel-heading"><strong>Further Reading</strong></div>
 </div>
 </div>
 
@@ -189,7 +183,16 @@ body { padding-top: 100px; }
   <div class="panel-heading"><strong>Jargon</strong></div>
 </div>
 </div>
+
 </div>
+
+<div class="row">
+<div class="col-md-12 col-sm-12">
+<div class="panel panel-default">
+  <div class="panel-heading"><strong>Further Reading</strong></div>
+</div>
+</div></div>
+
 
 <hr>
 
@@ -200,4 +203,3 @@ body { padding-top: 100px; }
 </div>
 </body>
 </html>
-
