fleshing glossary lists

--- a/alc-draft.html
+++ b/alc-draft.html
@@ -162,26 +162,50 @@ body { padding-top: 100px; }
 </div>
 
 <div id="key" class="row">
-<div class="col-md-4 col-sm-4">
 
+<div class="col-md-4 col-sm-4">
 <div class="panel panel-default">
   <div class="panel-heading"><strong>Devices</strong></div>
-</div>
+    <div id="share" class="panel-body">
+      <dl>
+        <dt>Cras justo odio</dt><dd></dd>
+        <dt>Cras justo odio</dt><dd></dd>
+        <dt>Cras justo odio</dt><dd></dd>
+        <dt>Cras justo odio</dt><dd></dd>
+        <dt>Cras justo odio</dt><dd></dd>
+      </dl>
+    </div>
+  </div>
 </div>
 
 <div class="col-md-4 col-sm-4">
-
 <div class="panel panel-default">
-  <!-- Default panel contents -->
   <div class="panel-heading"><strong>Connections</strong></div>
-</div>
+    <div id="share" class="panel-body">
+      <dl>
+        <dt>Cras justo odio</dt><dd></dd>
+        <dt>Cras justo odio</dt><dd></dd>
+        <dt>Cras justo odio</dt><dd></dd>
+        <dt>Cras justo odio</dt><dd></dd>
+        <dt>Cras justo odio</dt><dd></dd>
+      </dl>
+    </div>
+  </div>
 </div>
 
 <div class="col-md-4 col-sm-4">
 <div class="panel panel-default">
-  <!-- Default panel contents -->
   <div class="panel-heading"><strong>Jargon</strong></div>
-</div>
+    <div id="share" class="panel-body">
+      <dl>
+        <dt>Cras justo odio</dt><dd></dd>
+        <dt>Cras justo odio</dt><dd></dd>
+        <dt>Cras justo odio</dt><dd></dd>
+        <dt>Cras justo odio</dt><dd></dd>
+        <dt>Cras justo odio</dt><dd></dd>
+      </dl>
+    </div>
+  </div>
 </div>
 
 </div>
