--- a/alc-draft.html
+++ b/alc-draft.html
@@ -155,13 +155,13 @@ body { padding-top: 100px; }
 </div>
 
 
-<div id="heading-1" class="row">
+<div class="row">
 <div class="col-md-12 col-sm-12">
-<h3>Glossary</h3>
+<a href="javascript:void(0)" onclick="toggle_visibility('glossary');"><h3>Glossary</h3></a>
 </div>
 </div>
 
-<div id="key" class="row">
+<div id="glossary" class="row">
 
 <div class="col-md-4 col-sm-4">
 <div class="panel panel-default">
