rm well at NOTE

--- a/als-draft.html
+++ b/als-draft.html
@@ -91,7 +91,7 @@ body { padding-top: 100px; }
           <li>Presenter and participant stations turn on.</li>
           <li>Individual input devices (e.g., document camera, media players, etc.) power on or return from standby when selected as input.</li>
         </ol>
-        <div class="well"><strong>NOTE:</strong> To turn the room off, find the power icon and tap it again.</div>
+        <strong>NOTE:</strong> To turn the room off, find the power icon and tap it again.
       </div>
     </div>
 </div>
