rm well at NOTE

--- a/als-draft.html
+++ b/als-draft.html
@@ -68,7 +68,7 @@ body { padding-top: 100px; }
 
 <div class="container">
 
-<p class="lead">Quickly and simply configure an Active Learning Space classroom for nearly any purpose in three steps.</p>
+<p class="lead">Quickly and simply configure an Active Learning Space classroom for nearly any purpose in 3 steps.</p>
 
 <button onclick="javascript:window.print()" type="button" class="btn btn-default hidden-xs"><span class="glyphicon glyphicon-print"></span> Print</button>
 	
