draft for yuhnke

--- a/als-draft.html
+++ b/als-draft.html
@@ -166,7 +166,7 @@ body { padding-top: 100px; }
   <div class="panel-heading"><strong>Devices</strong></div>
     <div id="share" class="panel-body">
       <dl>
-        <dt>Cras justo odio</dt><dd></dd>
+        <dt>Apple TV</dt><dd>This is what an Apple TV is. And what it does.</dd>
         <dt>Cras justo odio</dt><dd></dd>
         <dt>Cras justo odio</dt><dd></dd>
         <dt>Cras justo odio</dt><dd></dd>
@@ -181,8 +181,8 @@ body { padding-top: 100px; }
   <div class="panel-heading"><strong>Connections</strong></div>
     <div id="share" class="panel-body">
       <dl>
-        <dt>Cras justo odio</dt><dd></dd>
-        <dt>Cras justo odio</dt><dd></dd>
+        <dt>HDMI</dt><dd>What you get</dd>
+        <dt>USB</dt><dd>Why you should not use it</dd>
         <dt>Cras justo odio</dt><dd></dd>
         <dt>Cras justo odio</dt><dd></dd>
         <dt>Cras justo odio</dt><dd></dd>
@@ -196,9 +196,9 @@ body { padding-top: 100px; }
   <div class="panel-heading"><strong>Jargon</strong></div>
     <div id="share" class="panel-body">
       <dl>
-        <dt>Cras justo odio</dt><dd></dd>
-        <dt>Cras justo odio</dt><dd></dd>
-        <dt>Cras justo odio</dt><dd></dd>
+        <dt>Airplay</dt><dd>Wireless connection from Apple devices to Apple TV.</dd>
+        <dt>Dongle</dt><dd>A short wire to that connects one kind of thing to another kind of thing.</dd>
+        <dt>Handshake</dt><dd></dd>
         <dt>Cras justo odio</dt><dd></dd>
         <dt>Cras justo odio</dt><dd></dd>
       </dl>
