--- a/als-draft.html
+++ b/als-draft.html
@@ -145,17 +145,22 @@ body { padding-top: 100px; }
 
 <div class="row">
 <div class="col-md-12 col-sm-12">
-<h3>Advanced Functions + More Help</h3>
+<h3><a href="javascript:void(0)" onclick="toggle_visibility('advanced');">Advanced + More Help</a></h3>
+</div>
+</div>
 
+<div id="advanced" class="row">
+<div class="col-md-12 col-sm-12">
 <p>Learn more about the <a href="https://www.case.edu/its/academic-technology/">ITS Academic Technologies team</a> and its institutional partners.</p>
-<p>Call the ITS Service Desk at <a href="tel:216-368-4357"><strong>(216) 368-4357</strong> (click to call)</a> for more help. No cell? A white service phone is mounted to the presenter's station for your convenience.</p>
+<p>Call the ITS Service Desk at <a href="tel:216-368-4357"><strong>(216) 368-4357</strong> (click to call)</a> for more help.</p>
+<p>No cell? A white service phone is mounted to the presenter's station for your convenience.</p>
 </div>
 </div>
 
 
 <div class="row">
 <div class="col-md-12 col-sm-12">
-<a href="javascript:void(0)" onclick="toggle_visibility('glossary');"><h3>Glossary</h3></a>
+<h3><a href="javascript:void(0)" onclick="toggle_visibility('glossary');">Glossary</a></h3>
 </div>
 </div>
 
