--- a/als-draft.html
+++ b/als-draft.html
@@ -89,9 +89,9 @@ body { padding-top: 100px; }
         <ol>
           <li>Using the control touch panel at the far right of the room, find the power icon and tap [on text]</li>
           <li>Presenter and participant stations turn on.</li>
-          <li>Individual input devices (e.g., document camera, media players, etc.) power on or return from standby when selected as input.</li>
+          <li>Individual input devices (e.g., document camera, media players, etc.) power on or return from standby when selected as input.
+          <p><strong>NOTE:</strong> To turn the room off, find the power icon and tap it again.</p></li>
         </ol>
-        <strong>NOTE:</strong> To turn the room off, find the power icon and tap it again.
       </div>
     </div>
 </div>
