--- a/als-draft.html
+++ b/als-draft.html
@@ -152,9 +152,8 @@ body { padding-top: 100px; }
 
 <div id="advanced" class="row">
 <div class="col-md-12 col-sm-12">
+<p>Call the ITS Service Desk at <a href="tel:216-368-4357"><strong>(216) 368-4357</strong> (click to call)</a> for more help. A white service phone is mounted to the presenter's station for your convenience.</p>
 <p>Learn more about the <a href="https://www.case.edu/its/academic-technology/">ITS Academic Technologies team</a> and its institutional partners.</p>
-<p>Call the ITS Service Desk at <a href="tel:216-368-4357"><strong>(216) 368-4357</strong> (click to call)</a> for more help.</p>
-<p>No cell? A white service phone is mounted to the presenter's station for your convenience.</p>
 </div>
 </div>
 
