--- a/als-draft.html
+++ b/als-draft.html
@@ -80,7 +80,7 @@ body { padding-top: 100px; }
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a href="javascript:void(0)" onclick="toggle_visibility('turn-on');">
+        <a onclick="toggle_visibility('turn-on');">
           Turn the room on </span><span class="glyphicon glyphicon-off pull-right"></span>
         </a>
       </h4>
