hide by default

--- a/als-draft.html
+++ b/als-draft.html
@@ -81,11 +81,11 @@ body { padding-top: 100px; }
     <div class="panel-heading">
       <h4 class="panel-title">
         <a onclick="toggle_visibility('turn-on');">
-          Turn the room on </span><span class="glyphicon glyphicon-off pull-right"></span>
+          Turn the room on <span class="glyphicon glyphicon-off pull-right"></span>
         </a>
       </h4>
     </div>
-      <div id="turn-on" class="panel-body">
+      <div id="turn-on" class="panel-body" style="display:none">
         <ol>
           <li>Using the control touch panel at the far right of the room, find the power icon and tap [on text]</li>
           <li>Presenter and participant stations turn on.</li>
@@ -103,7 +103,7 @@ body { padding-top: 100px; }
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a href="javascript:void(0)" onclick="toggle_visibility('present');">
+        <a onclick="toggle_visibility('present');">
           Prep for presentation <span class="glyphicon glyphicon-blackboard pull-right"></span>
         </a>
       </h4>
@@ -126,7 +126,7 @@ body { padding-top: 100px; }
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a href="javascript:void(0)" onclick="toggle_visibility('share');">
+        <a onclick="toggle_visibility('share');">
           Share your content <span class="glyphicon glyphicon-share pull-right"></span>
         </a>
       </h4>
@@ -146,7 +146,7 @@ body { padding-top: 100px; }
 
 <div class="row">
 <div class="col-md-12 col-sm-12">
-<h3><a href="javascript:void(0)" onclick="toggle_visibility('advanced');">Advanced + More Help</a></h3>
+<h3>Advanced + More Help</h3>
 </div>
 </div>
 
@@ -160,7 +160,7 @@ body { padding-top: 100px; }
 
 <div class="row">
 <div class="col-md-12 col-sm-12">
-<h3><a href="javascript:void(0)" onclick="toggle_visibility('glossary');">Glossary</a></h3>
+<h3><a onclick="toggle_visibility('glossary');">Glossary</a></h3>
 </div>
 </div>
 
@@ -212,13 +212,6 @@ body { padding-top: 100px; }
 </div>
 
 </div>
-
-<div class="row">
-<div class="col-md-12 col-sm-12">
-<div class="panel panel-default">
-  <div class="panel-heading"><strong>Further Reading</strong></div>
-</div>
-</div></div>
 
 
 <hr>
