hide by default

--- a/als-draft.html
+++ b/als-draft.html
@@ -108,7 +108,7 @@ body { padding-top: 100px; }
         </a>
       </h4>
     </div>
-      <div id="present" class="panel-body">
+      <div id="present" class="panel-body" style="display:none">
         <ol>
           <li>Cras justo odio</li>
           <li>Dapibus ac facilisis in</li>
@@ -131,7 +131,7 @@ body { padding-top: 100px; }
         </a>
       </h4>
     </div>
-      <div id="share" class="panel-body">
+      <div id="share" class="panel-body" style="display:none">
         <ol>
           <li>Cras justo odio</li>
           <li>Dapibus ac facilisis in</li>
@@ -146,7 +146,7 @@ body { padding-top: 100px; }
 
 <div class="row">
 <div class="col-md-12 col-sm-12">
-<h3>Advanced + More Help</h3>
+<h3>More Help</h3>
 </div>
 </div>
 
@@ -164,7 +164,7 @@ body { padding-top: 100px; }
 </div>
 </div>
 
-<div id="glossary" class="row">
+<div id="glossary" class="row" style="display:none">
 
 <div class="col-md-4 col-sm-4">
 <div class="panel panel-default">
