show glossary by default

--- a/als-draft.html
+++ b/als-draft.html
@@ -144,13 +144,9 @@ body { padding-top: 100px; }
 </div>
 </div>
 
-<div class="row">
-<div class="col-md-12 col-sm-12">
-<h3><a onclick="toggle_visibility('glossary');">Glossary</a></h3>
-</div>
-</div>
+<h3>Glossary</h3>
 
-<div id="glossary" class="row" style="display:none">
+<div class="row">
 
 <div class="col-md-4 col-sm-4">
 <div class="panel panel-default">
