init commit duo-guide

--- a/als-draft.html
+++ b/als-draft.html
@@ -133,10 +133,10 @@ body { padding-top: 100px; }
     </div>
       <div id="share" class="panel-body" style="display:none">
         <ol>
-          <li>Cras justo odio</li>
-          <li>Dapibus ac facilisis in</li>
-          <li>Morbi leo risus</li>
-          <li>Porta ac consectetur ac</li>
+          <li>Using the control touch pad, choose any of the input devices shown at the bottom the screen.</li>
+          <li>Touch the device name to select it, then using your finger, drag it over the station where you want it to display.</li>
+          <li>To show at all stations, drag to 'all stations'.</li>
+          <li>To show at all stations and on the projection screens, drag to 'all displays'.</li>
           <li>Vestibulum at eros</li>
         </ol>
       </div>
