--- a/duo-guide-refactor.html
+++ b/duo-guide-refactor.html
@@ -126,11 +126,11 @@ body { padding-top: 100px; }
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a onclick="toggle_visibility('2fa-how');">Additional Resources</a>
+        <a onclick="toggle_visibility('additional-resources');">Additional Resources</a>
       </h4>
     </div>
       
-  <div id="2fa-how" class="panel-body" style="display:none">
+  <div id="additional-resources" class="panel-body" style="display:none">
     <p>Self enrollment is available via multiple methods. Information Security recommends all users enroll the following two devices:</p>
     <ul>
       <li>Smartphone using the mobile application for iOS or Android</li>
@@ -138,7 +138,6 @@ body { padding-top: 100px; }
       <p><strong>NOTE:</strong> Use your desk phone as a backup in the case that a mobile phone is lost, stolen or damaged.</p></li>
     </ul>
   </div>
-</div>
 </div>
 </div>
 
@@ -165,7 +164,6 @@ body { padding-top: 100px; }
       <p><strong>NOTE:</strong> Use your desk phone as a backup in the case that a mobile phone is lost, stolen or damaged.</p></li>
     </ul>
   </div>
-</div>
 </div>
 </div>
 
