commit 2 duo-guide

--- a/duo-guide-refactor.html
+++ b/duo-guide-refactor.html
@@ -145,6 +145,10 @@ body { padding-top: 100px; }
  
 <h3>How to Enroll in DUO Security</h3>
 
+<h4>Before you begin</h4>
+<p><span class="glyphicon glyphicon-alert"> Prepare to enroll a mobile phone by having each of these items ready; your CWRU network ID and password, a laptop or desktop computer connected to the internet, a copy of these instructions, and your Android or iOS mobile phone.</p>
+
+
 <div class="row">
 <div class="col-md-12 col-sm-12">
   <div class="panel panel-default">
@@ -230,7 +234,7 @@ body { padding-top: 100px; }
 
 
 
-<h4 id="before-you-begin">Before you begin</h4>
+<h4>Before you begin</h4>
 <p>Prepare to enroll a mobile phone by having each of these items ready; your CWRU network ID and password, a laptop or desktop computer connected to the internet, a copy of these instructions, and your Android or iOS mobile phone.</p>
 <div class="se-section-delimiter">&nbsp;</div>
 <h4 id="install-the-duo-mobile-application">Install the Duo Mobile application</h4>
