commit 2 duo-guide

--- a/duo-guide-refactor.html
+++ b/duo-guide-refactor.html
@@ -146,7 +146,7 @@ body { padding-top: 100px; }
 <h3>How to Enroll in DUO Security</h3>
 
 <h4>Before you begin</h4>
-<p><span class="glyphicon glyphicon-alert"> Prepare to enroll a mobile phone by having each of these items ready; your CWRU network ID and password, a laptop or desktop computer connected to the internet, a copy of these instructions, and your Android or iOS mobile phone.</p>
+<p><span class="glyphicon glyphicon-alert"></span> Prepare to enroll a mobile phone by having each of these items ready; your CWRU network ID and password, a laptop or desktop computer connected to the internet, a copy of these instructions, and your Android or iOS mobile phone.</p>
 
 
 <div class="row">
