--- a/duo-guide-refactor.html
+++ b/duo-guide-refactor.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1">
- <title>ALS - Quick Start Guide</title>
+ <title>DUO Security - Quick Start Guide</title>
 
 <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <script src="/bootstrap/js/bootstrap.min.js"></script>
@@ -330,12 +330,7 @@ body { padding-top: 100px; }
 
 
 
-
-<div class="se-section-delimiter">&nbsp;</div>
-
-
-
-‌<!-- Content piece, "How to enroll a landline" -->
+<h3>
 
 
 
