incremental edits Duo per K Skapin

--- a/duo-guide-refactor.html
+++ b/duo-guide-refactor.html
@@ -348,6 +348,7 @@ body { padding-top: 100px; }
   </div>
 </div>
 </div>
+</div>
 
 <div class="row">
 <div class="col-md-12 col-sm-12">
@@ -362,6 +363,7 @@ body { padding-top: 100px; }
     <p>Self enrollment is available via multiple methods. Information Security recommends all users enroll the following two devices:</p>
 
   </div>
+</div>
 </div>
 </div>
 
@@ -380,6 +382,7 @@ body { padding-top: 100px; }
   </div>
 </div>
 </div>
+</div>
 
 <div class="row">
 <div class="col-md-12 col-sm-12">
@@ -394,6 +397,7 @@ body { padding-top: 100px; }
     <p>Self enrollment is available via multiple methods. Information Security recommends all users enroll the following two devices:</p>
 
   </div>
+</div>
 </div>
 </div>
 
@@ -412,6 +416,7 @@ body { padding-top: 100px; }
   </div>
 </div>
 </div>
+</div>
 
 <div class="row">
 <div class="col-md-12 col-sm-12">
@@ -426,6 +431,7 @@ body { padding-top: 100px; }
     <p>Self enrollment is available via multiple methods. Information Security recommends all users enroll the following two devices:</p>
 
   </div>
+</div>
 </div>
 </div>
 
