--- a/duo-guide-refactor.html
+++ b/duo-guide-refactor.html
@@ -164,12 +164,12 @@ body { padding-top: 100px; }
       <li>When prompted, type in your CWRU network ID and password.</li>
       <li>Click <strong>Start Setup</strong>.</li>
       <li>Choose "Mobile phone" as your device type and click&nbsp;<strong>Continue</strong>.<br>
-      <img src="https://guide.duosecurity.com/static/images/enrollment-choose.png" alt="..." class="img-rounded"></li>
+      <img src="https://guide.duosecurity.com/static/images/enrollment-choose.png" alt="..." class="img-rounded img-responsive"></li>
       <li>Type your 10 digit phone number and choose the country associated with it. Use number of the smartphone you'll have with you when you're logging in.<br>
-      <img src="https://guide.duosecurity.com/static/images/enrollment-phone.png" alt="..." class="img-rounded"></li>
+      <img src="https://guide.duosecurity.com/static/images/enrollment-phone.png" alt="..." class="img-rounded img-responsive"></li>
       <li>Double-check your phone number and then select the box marked "<strong>(###) ###-####</strong>&nbsp;is the correct phone number". Click <strong>Continue</strong>.</li>
       <li>Choose your operating system (e.g., iOS, Android, Blackberry) and click&nbsp;<strong>Continue</strong>.<br>
-      <img src="https://guide.duosecurity.com/static/images/enrollment-platform.png" class="img-rounded">
+      <img src="https://guide.duosecurity.com/static/images/enrollment-platform.png" class="img-rounded img-responsive">
       </li>
       <li>Search for "Duo Mobile" in your smartphone's application store and then install it.</li>
       <li>Return to your computer. Choose "I have Duo Mobile installed" and click&nbsp;<strong>Continue</strong>.</li>
