limit image size with col

--- a/duo-guide-refactor.html
+++ b/duo-guide-refactor.html
@@ -166,7 +166,10 @@ body { padding-top: 100px; }
       <li>Choose "Mobile phone" as your device type and click&nbsp;<strong>Continue</strong>.<br>
       <img src="https://guide.duosecurity.com/static/images/enrollment-choose.png" alt="..." class="img-rounded img-responsive"></li>
       <li>Type your 10 digit phone number and choose the country associated with it. Use number of the smartphone you'll have with you when you're logging in.<br>
-      <img src="https://guide.duosecurity.com/static/images/enrollment-phone.png" alt="..." class="img-rounded img-responsive"></li>
+      <div class="row">
+      <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+      <img src="https://guide.duosecurity.com/static/images/enrollment-phone.png" alt="..." class="img-rounded img-responsive">
+      </div></div></li>
       <li>Double-check your phone number and then select the box marked "<strong>(###) ###-####</strong>&nbsp;is the correct phone number". Click <strong>Continue</strong>.</li>
       <li>Choose your operating system (e.g., iOS, Android, Blackberry) and click&nbsp;<strong>Continue</strong>.<br>
       <img src="https://guide.duosecurity.com/static/images/enrollment-platform.png" class="img-rounded img-responsive">
