limit image size with col

--- a/duo-guide-refactor.html
+++ b/duo-guide-refactor.html
@@ -166,21 +166,19 @@ body { padding-top: 100px; }
       <li>Choose "Mobile phone" as your device type and click&nbsp;<strong>Continue</strong>.<br>
       <p>&nbsp;</p>
       <div class="row">
-      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-      <img src="https://guide.duosecurity.com/static/images/enrollment-choose.png" class="img-responsive"></div></div></li>
+      <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
+        <img src="https://guide.duosecurity.com/static/images/enrollment-choose.png" class="img-responsive"></div></div><p>&nbsp;</p></li>
       <li>Type your 10 digit phone number and choose the country associated with it. Use number of the smartphone you'll have with you when you're logging in.<br>
       <p>&nbsp;</p>
       <div class="row">
-      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-        <img src="https://guide.duosecurity.com/static/images/enrollment-phone.png" class="img-responsive">
-        </div></div></li>
+      <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
+        <img src="https://guide.duosecurity.com/static/images/enrollment-phone.png" class="img-responsive"></div></div><p>&nbsp;</p></li>
       <li>Double-check your phone number and then select the box marked "<strong>(###) ###-####</strong>&nbsp;is the correct phone number". Click <strong>Continue</strong>.</li>
       <li>Choose your operating system (e.g., iOS, Android, Blackberry) and click&nbsp;<strong>Continue</strong>.<br>
       <p>&nbsp;</p>
       <div class="row">
-      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-      <img src="https://guide.duosecurity.com/static/images/enrollment-platform.png" class="img-responsive"></div></div>
-      </li>
+      <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
+        <img src="https://guide.duosecurity.com/static/images/enrollment-platform.png" class="img-responsive"></div></div><p>&nbsp;</p></li>
       <li>Search for "Duo Mobile" in your smartphone's application store and then install it.</li>
       <li>Return to your computer. Choose "I have Duo Mobile installed" and click&nbsp;<strong>Continue</strong>.</li>
     </ol>
